--- a/resources/application.qrc
+++ b/resources/application.qrc
@@ -16,4 +16,8 @@
         <file>images/diagram/background3.png</file>
         <file>images/diagram/background4.png</file>
     </qresource>
+
+    <qresource>
+        <file>images/newcut/app_icon.png</file>
+    </qresource>
 </RCC>
